--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://akhil-anand.github.io/",
+  "homepage": "https://akhil-anand.github.io/trvl",
   "name": "trvl",
   "version": "0.1.0",
   "private": true,
